2006-04-04  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/regexp/CharIndexed.java(setAnchor): New method.
	* gnu/regexp/CharIndexedInputStream.java(setAnchor): New method.
	* gnu/regexp/CharIndexedCharSequence.java: New file.
	* gnu/regexp/CharIndexedCharArray.java: Rewritten as an extention of
	gnu.regexp.CharIndexedCharSequence.
	* gnu/regexp/CharIndexedString.java: Likewise.
	* gnu/regexp/CharIndexedStringBuffer.java: Likewise.
	* gnu/regexp/RE.java(makeCharIndexed): Make a new CharIndexed
	using CharIndexedCharSequence. Use setAnchor when the input
	object is already a CharIndexed.
	* java/util/regex/Matcher.java(inputCharIndexed): New field
	to be used as a parameter of the RE#getMatch.

2006-04-04  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/SampleModel.java: Reformatted.

2006-04-04  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/ComponentSampleModel.java
	(ComponentSampleModel(int, int, int, int, int[])): Added API 
	documentation,
	(ComponentSampleModel(int, int, int, int, int[], int[]): Throw 
	IllegalArgumentException for DataBuffer.TYPE_UNDEFINED, take copies
	of the bandOffsets and bankIndices arguments, added API documentation,
	* java/awt/image/SampleModel.java
	(SampleModel(int, int, int, int): Throw IllegalArgumentException for
	unrecognised dataTypes, w * h exceeds Integer.MAX_VALUE, and numBands
	less than or equal to zero, added API documentation.

2006-04-04  Lillian Angel  <langel@redhat.com>

	* java/util/zip/ZipFile.java
	(getInputStream): Fixed to return size of ZipEntry
	minus the total bytes read. This guarantees that the 
	right value is returned even if some bytes have already
	been read.

2006-04-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* javax/imageio/plugins/jpeg/JPEGImageWriteParam.java (messages):
	Remove static modifier.

2006-04-04  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/ComponentSampleModel.java: Reformatted.
